# Tribune

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tribune/: __init__.py  cli.py  cost.py  error_format.py  exceptions.py  llm.py  llm_claude_code.py  llm_google.py  llm_ollama.py  llm_openai.py  review.py  schemas.py  user_config.py  vcs.py  vcs_azure.py  vcs_bitbucket.py  vcs_github.py  vcs_gitlab.py
tests/: conftest.py  test_review.py  test_vcs.py
