[project]
name = "tribune-agent"
version = "0.1.0a1"
description = "AI code/PR review agent. Fetches a pull request, asks an LLM to review it, posts inline comments + summary verdict back to the VCS. Self-hosted, multi-VCS (GitHub, GitLab, Bitbucket, Azure DevOps), multi-LLM (Anthropic / OpenAI / Google / Claude Code / Ollama). Standalone: no inter-package runtime deps."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "ThinkNext Software Solutions", email = "hello@thinknextsoftware.com" }
]
keywords = [
    "ai", "agent", "ai-agent", "agentic-ai", "llm",
    "code-review", "pr-review", "pull-request", "merge-request",
    "github", "gitlab", "bitbucket", "azure-devops",
    "self-hosted", "open-source",
    "anthropic", "openai", "claude", "gemini",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control",
    "Environment :: Console",
]

# Tribune is standalone: it carries its own LLM client + VCS adapter
# layers so it does not depend on any other ThinkNext package at runtime.
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "PyGithub>=2.0",
    "requests>=2.31",
    "httpx>=0.27",
]

[project.optional-dependencies]
# LLM provider extras.
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.30"]
google = ["google-generativeai>=0.7"]
claude-code = ["claude-agent-sdk>=0.1"]
all = [
    "anthropic>=0.30",
    "openai>=1.30",
    "google-generativeai>=0.7",
    "claude-agent-sdk>=0.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "black>=24.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
tribune = "tribune.cli:main"

[project.urls]
Homepage = "https://thinknextsoftware.com"
Documentation = "https://github.com/Thinknext-Software-Solutions/Tribune"
Repository = "https://github.com/Thinknext-Software-Solutions/Tribune"
Issues = "https://github.com/Thinknext-Software-Solutions/Tribune/issues"
Changelog = "https://github.com/Thinknext-Software-Solutions/Tribune/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tribune"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "W", "UP", "RUF"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
